infra/k8s/integrationtool-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrationtool-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integrationtool
  template:
    metadata:
      labels:
        app: integrationtool
    spec:
      containers:
      - name: integrationtool
        image: us.gcr.io/project ID on GCP/hcsintegrationtool

---

apiVersion: v1
kind: Service
metadata:
  name:  integrationtool-srv
spec:
  selector:
    app:  integrationtool
  ports:
  - name:  integrationtool
    protocol: TCP
    port:  3000
    targetPort:  3000
